<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_about"
            android:title="@string/menu_about"/>
        <item
            android:id="@+id/nav_news"
            android:title="@string/menu_news"/>
        <item
            android:id="@+id/nav_podcasts"
            android:title="@string/menu_podcasts"/>
        <item
            android:id="@+id/nav_notes"
            android:title="@string/menu_notes"/>
        <item
            android:id="@+id/nav_verses"
            android:title="@string/menu_verses"/>
        <item
            android:id="@+id/nav_contact"
            android:title="@string/menu_contact"/>
        <item
            android:id="@+id/nav_logout"
            android:title="@string/menu_logout"/>
    </group>
</menu>
