<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/conquistadores_logo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="-20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_conquistadores_en_blanco_modificado"/>

    <EditText
        android:id="@+id/emailRegister"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/conquistadores_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-30dp"
        android:paddingBottom="18dp"
        android:hint="@string/email"
        android:textColor="@color/colorTextWhite"
        android:textColorHint="@color/colorTextWhite"/>

    <EditText
        android:id="@+id/passwordRegister"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailRegister"
        android:layout_centerHorizontal="true"
        android:paddingBottom="18dp"
        android:hint="@string/password"
        android:textColor="@color/colorTextWhite"
        android:textColorHint="@color/colorTextWhite"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button_login"
        android:text="@string/register_text"
        android:textColor="@color/colorTextWhite"/>

</RelativeLayout>