<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".com.jbarseg.conquistadores.com.jbarseg.conquistadores.notes.EditNoteActivity">

    <TextView
        android:id="@+id/big_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:textAppearance="?android:textAppearanceLarge"
        android:padding="20dp"
        android:textColor="@color/colorTextWhite"
        android:textSize="40sp"/>

    <EditText
        android:id="@+id/title_note"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_below="@id/big_title"
        android:ems="10"
        android:hint="@string/title_note"
        android:maxLines="1"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/colorTextWhite"
        android:textColorHint="@color/colorTextWhite"/>

    <EditText
        android:id="@+id/description_note"
        android:layout_width="match_parent"
        android:layout_height="441dp"
        android:layout_below="@id/title_note"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/description_note"
        android:inputType="textMultiLine|text"
        android:padding="20dp"
        android:textColor="@color/colorTextWhite"
        android:textColorHint="@color/colorTextWhite"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/title_note"
        android:layout_alignBottom="@+id/description_note"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="38dp"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_menu_save"/>

    <Button
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/saveButton"
        android:layout_alignBottom="@id/saveButton"
        android:layout_marginBottom="3.5dp"
        android:layout_marginRight="145dp"
        android:background="@drawable/rounded_button"
        android:text="@string/delete_note_text"
        android:textColor="@color/colorTextWhite"/>


</RelativeLayout>